--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ span,
 .container {
   margin: 0;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -136,4 +136,9 @@ span,
   display: grid;
   grid-template-columns: auto auto auto;
   margin: 1em 0;
+}
+
+.dataHeader img {
+  height: 35px;
+  width: 35px;
 }
