--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ h1 {
   text-align: center;
 }
 
-/* Style the form */
 #form {
   margin: 100px auto;
   width: 650px;
 }
 
+/* Style the labels */
 label {
   width: 100%;
   display: inline-block;
@@ -37,6 +37,7 @@ label {
   justify-content: center;
 }
 
+/* Style the buttons */
 button {
   margin: 0.5em;
   padding: 0.5em;
@@ -59,27 +60,14 @@ input {
   text-align: center;
 }
 
-/* Hide all steps by default: */
+/* Hide all form tabs by default */
 .tab {
   display: none;
 }
 
-table {
-  margin: 0 auto;
-}
-
+/* Hide final results section by default */
 #results {
   display: none;
-}
-
-span,
-.finalAmount {
-  font-weight: bold;
-}
-
-.finalAmount {
-  border-top: 1px solid;
-  border-bottom: 3px double;
 }
 
 .resultsData {
@@ -89,12 +77,18 @@ span,
 
 .resultsData p {
   padding: 0.5em;
-  border-radius: 5px;
-  text-align: center;
   margin: 0.5em;
 }
 
-.dataHeader {
+/* Style the display of data results */
+.data {
+  background-color: white;
+  border: 1px solid black;
+  color: black;
+}
+
+/* Style the results headers */
+.resultsHeader {
   font-weight: bold;
   background-color: black;
   color: white;
@@ -102,22 +96,19 @@ span,
   text-transform: uppercase;
 }
 
+/* Style the positive results headers */
 #posNetResult {
   background-color: rgb(0, 155, 0);
   padding: 0.5em;
 }
 
+/* Style the negative results headers */
 #negNetResult {
   background-color: rgb(220, 0, 0);
   padding: 0.5em;
 }
 
-.data {
-  background-color: white;
-  border: 1px solid black;
-  color: black;
-}
-
+/* Center containers */
 #results,
 .container {
   margin: 0;
@@ -138,7 +129,8 @@ span,
   margin: 1em 0;
 }
 
-.dataHeader img {
+/* Set image size for emoji's */
+.resultsHeader img {
   height: 35px;
   width: 35px;
 }
